# Fiscus

./: README.md  biome.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: api-documentation-analysis.md  api-reference.md  api-security-guide.md  api-testing-guide.md  balance-calculation-fix.md  custom-hooks.md  dashboard-ui-guide.md  database-connection-manager.md  database-integration.md  database-seeding.md  development-tools.md  feature-requirements.md  logging-examples.md  logging-system.md  nonce-reuse-prevention.md  phase-1-foundation.md  react-integration.md  secure-storage-migration.md  security-migration-guide.md  sqlite-implementation-summary.md
src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: nonce_reuse_prevention.rs
src-tauri/migrations/: 001_initial_schema.sql  002_secure_storage.sql
src-tauri/src/: database.rs  dto.rs  error.rs  lib.rs  main.rs  models.rs  test_database.rs  test_utils.rs  utils.rs
src-tauri/src/commands/: accounts.rs  auth.rs  budgets.rs  categories.rs  encryption.rs  goals.rs  mod.rs  reports.rs  secure_storage.rs  transactions.rs
src-tauri/src/database/: config.rs  connection.rs  encrypted.rs  secure_storage_repository.rs  sqlite.rs
src-tauri/src/encryption/: asymmetric.rs  config.rs  key_derivation.rs  key_management.rs  mod.rs  nonce_manager.rs  symmetric.rs  types.rs  utils.rs
src-tauri/src/logging/: README.md  config.rs  middleware.rs  mod.rs  performance.rs  sanitizer.rs  tests.rs
src-tauri/src/security/: data_protection.rs  mod.rs
src-tauri/src/services/: mod.rs  secure_storage_service.rs
src-tauri/tests/: balance_calculation_tests.rs  encryption_integration_tests.rs  encryption_unit_tests.rs  security_tests.rs
src/api/: client.ts
(+103 files in other folders)
