[package]
name = "fiscus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fiscus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1.0"
regex = "1.11"
once_cell = "1.21"
rust_decimal = { version = "1.0", features = ["serde-float"] }
argon2 = { version = "0.5", features = ["password-hash"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "json",
    "env-filter",
    "fmt",
    "time",
] }
rand = "0.8"
# Encryption dependencies
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
scrypt = "0.11"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
base64 = "0.22"
async-trait = "0.1"
hex = "0.4"
subtle = "2.6"
toml = "0.9"
humantime-serde = "1.1"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.20"
